--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lumanosimo&family=Open+Sans:wght@300&family=Tektur:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Anton&family=Edu+SA+Beginner:wght@600;700&family=Lato:wght@100&family=Noto+Serif+JP:wght@200;300&family=Open+Sans:ital,wght@1,300;1,400&family=Oswald&family=Quicksand:wght@600&family=REM:ital@1&family=Roboto+Slab:wght@200;300&family=Roboto:ital,wght@0,400;0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -39,7 +38,7 @@
 
       <section id="home">
         <div class="title">
-          <h1 class="title_h1">I'm Tom <span id="lastname">Steel</span></h1>
+          <h1 class="title_h1">I'm Anfas <span id="lastname">Mohd</span></h1>
           <p class="title_p">
             This is my portfolio website to describe all
             <br />
@@ -49,7 +48,7 @@
             class="download"
             href="https://drive.google.com/file/d/1ga45wxmK63zk4AP5R8VPYyGM1L6oY2IW/view?usp=sharing"
             target="_blank"
-            >Download cv</a
+            >Download CV</a
           >
         </div>
         <div class="images">
@@ -67,7 +66,7 @@
         </div>
         <div class="contents">
           <div class="imgs">
-            <img src="./Gallery/pngwing.com (1).png" alt="" />
+            <img src="./Gallery/img1.avif" alt="" />
           </div>
           <div class="about-details">
             <p>
@@ -79,19 +78,19 @@
             <div class="information">
               <div class="info-box">
                 <i class="fa-solid fa-user fa-beat"></i>
-                <span>Tom Steel</span>
+                <span>Anfas Mohd</span>
               </div>
               <div class="info-box">
                 <i class="fa-solid fa-phone fa-beat"></i>
-                <span>8833448811</span>
+                <span>9567771915</span>
               </div>
               <div class="info-box">
                 <i class="fa-solid fa-envelope fa-beat"></i>
-                <span>tom@gmail.com</span>
+                <span>anfasmohd@gmail.com</span>
               </div>
               <div class="info-box">
                 <i class="fa-brands fa-github fa-beat"></i>
-                <span>tom</span>
+                <span>Anfas</span>
               </div>
             </div>
           </div>
@@ -128,13 +127,13 @@
               </div>
               <div class="bar-container">
                 <h3>REACT</h3>
-                <span>90%</span>
+                <span>80%</span>
                 <div class="base-bar"></div>
                 <div class="base-bar reactbar"></div>
               </div>
             </div>
             <div class="skill-img">
-              <img src="./Gallery/skills.webp" alt="" />
+              <img src="./Gallery/image 2.avif" alt="" />
             </div>
           </div>
         </div>
@@ -145,7 +144,7 @@
       <section id="contact">
         <div class="contact">
           <h1>Contacts</h1>
-          <p>My Condacts</p>
+          <p>My Contacts</p>
         </div>
         <div class="icon-set">
           <div class="icon">
@@ -172,7 +171,7 @@
       <section>
         <div class="footer">
           <p>
-            &copy; My portfolio gesign 2023, All rights Reserved &reg; tom steel
+            &copy; My portfolio design 2023, All rights Reserved &reg; Anfas Mohd
           </p>
         </div>
         <div class="arrow">
