--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <section id="home">
         <div class="title">
-          <h1 class="title_h1">I'm Anfas <span id="lastname">Mohd</span></h1>
+          <h1 class="title_h1">I'm Mohd <span id="lastname">Musthafa</span></h1>
           <p class="title_p">
             This is my portfolio website to describe all
             <br />
